--- a/estilos.css
+++ b/estilos.css
@@ -1,32 +1,92 @@
 body{
-    background-color:steelblue;
+    width: 21cm;
+    height: 28.7cm;
+    background: white;
+}
+header {
+    width: 100%;
+    margin: 10px;
+    
+    border-radius: 2px;
 }
 
-div{
-    background-color:aliceblue;
+#caja {
+    width: 21cm;
+    height: 27.7cm;
+    padding: 2cm;
+    margin: 1cm auto;
+    border: 1px #D3D3D3 solid;
+    border-radius: 5px;
+    background: #B3B6B7;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+div {
+    background-color: aliceblue;
     border: 1px solid black;
     padding: 12px;
     width: 60%;
     margin: 0 auto;
 }
-
-fieldset{
-    margin-bottom: 12px;
-    background-color: floralwhite;
+#names{
+    font-size: 35pt;
+    text-align:start;
 }
-legend{
-    background-color:black;
+
+fieldset {
+    margin-bottom: 12px;
+    background-color: #839192;
+    border-radius: 2px;
+    width: auto;
+    padding: 5px;
+    
+}
+
+legend {
+    background-color: #D35400;
     padding: 5px;
     border-radius: 20px;
     font-weight: bold;
     color: white;
 }
-img{
-    border-radius: 320%;
-    margin-bottom: 12px;
-    margin-right: 30px;
-    float: left;
-}
-#negrita{
+
+#negrita {
     font-weight: bolder;
+    font-size: 13pt;
+
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #FAFAFA;
+    font: 11pt "Constantia";
+    
+}
+
+* {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+
+
+@page {
+    size: A4;
+    margin: 0;
+}
+
+@media print {
+    .page {
+        size: A4;
+        margin: 0;
+        border: initial;
+        border-radius: initial;
+        width: initial;
+        min-height: initial;
+        box-shadow: initial;
+        background: initial;
+        page-break-after: always;
+    }
 }
